--- a/mlp-game/index.html
+++ b/mlp-game/index.html
@@ -16,4 +16,9 @@
 
     <title>my little pony songs</title>
   </head>
+  <body>
+    <div class="startscreen">
+      <button class="playbtn">▶ play!</button>
+    </div>
+  </body>
 </html>
