--- a/create-task/index.html
+++ b/create-task/index.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="/mane6.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <link href="/src/style.css" rel="stylesheet" />
 
-    <title>my little pony songs</title>
+    <title>memory game</title>
   </head>
   <body>
     <div class="startscreen">
