--- a/create-task/index.html
+++ b/create-task/index.html
@@ -20,5 +20,19 @@
     <div class="startscreen">
       <button class="playbtn">▶ play!</button>
     </div>
+    <div class="gamebuttons hidden">
+      <button class="usagi">
+        <img src="/usagi.png" alt="usagi" />
+      </button>
+
+      <button class="chiikawa">
+        <img src="/chiikawa.png" alt="chiikawa" />
+      </button>
+
+      <button class="hachiware">
+        <img src="/hachiware.png" alt="hachiware" />
+      </button>
+    </div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
