--- a/create-task/index.html
+++ b/create-task/index.html
@@ -20,6 +20,7 @@
     <div class="startscreen">
       <button class="playbtn">▶ play!</button>
     </div>
+
     <div class="gamebuttons hidden">
       <button class="usagi">
         <img src="/usagi.png" alt="usagi" />
@@ -33,6 +34,7 @@
         <img src="/hachiware.png" alt="hachiware" />
       </button>
     </div>
+    <div class="instruction-text">pay attention to the pattern:</div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
