--- a/create-task/index.html
+++ b/create-task/index.html
@@ -34,7 +34,7 @@
         <img src="/hachiware.png" alt="hachiware" />
       </button>
     </div>
-    <div class="instruction-text">pay attention to the pattern:</div>
+    <div class="instruction-text"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
